--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Engage Starter</title>
+    <title>FlashPackers</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Philosopher:ital@1&family=Roboto:ital,wght@1,300;1,500&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <div id="app"></div>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <script src="../dist/bundle.js"></script>
   </body>
 </html>
